# target-extend

./: README.md  pyproject.toml
target_extend/: __init__.py  auth.py  client.py  sinks.py  target.py
tests/: test_payload.py
