[tool.poetry]
name = "target-extend"
version = "0.1.0"
description = "Hotglue Singer target for creating Extend Commerce purchase orders."
authors = ["Hotglue"]
keywords = ["ELT", "Extend Commerce", "Singer", "Hotglue"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.9.0"
target-hotglue = "^0.0.2"
backoff = "^1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = "target_extend"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
target-extend = "target_extend.target:TargetExtend.cli"
